<resources>
    <string name="app_name">EchoMusic</string>

    <string name="hi_username">\uD83D\uDC4B Hi </string>

    <string name="t_n_ng_nh_p">Tên đăng nhập</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="b_n_c_t_i_kho_n">Bạn đã có tài khoản?</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="email_id">Email id</string>

    <string name="title_2">Đã nghe gần đây</string>
    <string name="title_2.1">Xem thêm</string>

    <string name="title_image_featuring_1">V-pop mới</string>

    <string name="title_activity_libraries">Thư viện của bạn</string>
    <string name="title_menu_item1">Trang chủ</string>
    <string name="title_menu_item2">Tìm kiếm</string>
    <string name="title_menu_item3">Thư viện</string>

    <string name="bar_foryou">Dành cho bạn</string>
</resources>